--- a/k8s/nexus-deployment.yaml
+++ b/k8s/nexus-deployment.yaml
@@ -3,18 +3,6 @@ kind: Namespace
 metadata:
   name: nexus
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nexus-data
-  namespace: nexus
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,21 +26,20 @@ spec:
         - containerPort: 8081
         env:
         - name: INSTALL4J_ADD_VM_PARAMS
-          value: "-Xms2g -Xmx2g -XX:MaxDirectMemorySize=3g"
+          value: "-Xms1g -Xmx1g -XX:MaxDirectMemorySize=1g"
         volumeMounts:
         - name: nexus-data
           mountPath: /nexus-data
         resources:
           requests:
+            memory: "1Gi"
+            cpu: "250m"
+          limits:
             memory: "2Gi"
             cpu: "500m"
-          limits:
-            memory: "4Gi"
-            cpu: "1000m"
       volumes:
       - name: nexus-data
-        persistentVolumeClaim:
-          claimName: nexus-data
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
