någonform av bas tester av gui fungerar

--- a/testning/pytest.ini
+++ b/testning/pytest.ini
@@ -14,5 +14,8 @@ markers =
     unit: Unit tests
     integration: Integration tests
     api: API endpoint tests
+    gui: GUI tests with Playwright
+    health: Environment health checks (run first)
     slow: Slow running tests
     k8s: Kubernetes integration tests (run separately on host)
+asyncio_mode = auto
