--- a/testning/requirements.txt
+++ b/testning/requirements.txt
@@ -11,7 +11,12 @@ pydantic==2.5.0
 # Test reporting
 pytest-json-report==1.5.0
 pytest-benchmark==4.0.0
+pytest-order==1.2.0
 
 # Utilities
 colorama==0.4.6
 rich==13.7.0
+
+# GUI Testing
+playwright==1.40.0
+pytest-playwright==0.4.3
