--- a/testning/Dockerfile
+++ b/testning/Dockerfile
@@ -1,17 +1,22 @@
-FROM python:3.11-slim
+FROM ubuntu:22.04
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including Python
 RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
     curl \
-    kubectl \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# Install Playwright browsers
+RUN playwright install --with-deps
 
 # Copy test files
 COPY . .
@@ -20,5 +25,5 @@ COPY . .
 ENV PYTHONPATH=/app
 ENV PYTEST_CURRENT_TEST=true
 
-# Default command
-CMD ["pytest", "-v", "--tb=short"]
+# Default command - starta bash shell
+CMD ["/bin/bash"]
