--- a/testning/pytest.ini
+++ b/testning/pytest.ini
@@ -3,16 +3,18 @@ testpaths = test
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
-    -v
-    --tb=short
-    --disable-warnings
-    --color=yes
-    --durations=10
-    -m "not k8s"
+# addopts = 
+#     -v
+#     --tb=short
+#     --disable-warnings
+#     --color=yes
+#     --durations=10
+#     -m "not k8s"
 markers =
     unit: Unit tests
     integration: Integration tests
     api: API endpoint tests
+    gui: GUI tests with Playwright
+    health: Environment health checks (run first)
     slow: Slow running tests
     k8s: Kubernetes integration tests (run separately on host)
