--- a/build-pip/pyproject.toml
+++ b/build-pip/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+py-modules = []
+
 [project]
 name = "nexus-repository-api"
 version = "1.0.0"
@@ -70,6 +73,9 @@ include = ["nexus_repository_api*"]
 
 [tool.setuptools.package-data]
 nexus_repository_api = ["*.txt", "*.md", "*.yaml", "*.yml"]
+
+[tool.setuptools.package-dir]
+"" = "."
 
 [tool.black]
 line-length = 88
