fixa till så att tester och lite endpoint problem

--- a/testning/pytest.ini
+++ b/testning/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 testpaths = test
 python_files = test_*.py
 python_classes = Test*
@@ -18,4 +18,9 @@ markers =
     health: Environment health checks (run first)
     slow: Slow running tests
     k8s: Kubernetes integration tests (run separately on host)
+    basic: Basic API functionality tests
+    errors: Error handling tests
+    error_handling: Error handling tests (alternative)
+    validation: Data validation tests
+    workflows: End-to-end workflow tests
 asyncio_mode = auto
